Use ForwardRelativePath in BuildTargetPaths
Summary:
* It's more convenient to use `ForwardRelativePath` in tests, because there's no need to use filesystem
* `ForwardRelativePath` makes it clear that function returns relative path
* this diff implicitly assert that format string formats a proper `ForwardRelativePath` (except Windows where backslashes are replaced with slashes)

Reviewed By: gabrielrussoc

shipit-source-id: bc7f6f2ad7